[project]
name = "nios-file-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "anyio>4.12.5",
    "appdirs==1.4.4",
    "certifi>2026.2.1",
    "click==8.3.1",
    "click-option-group==0.5.9",
    "coloredlogs==15.0.1",
    "dnspython==2.8.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "humanfriendly==10.0",
    "ibx-sdk==0.7.7",
    "idna==3.11",
    "linkify-it-py>=2.1.0",
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "netaddr==1.3.0",
    "pip>=26.0.0",
    "platformdirs>=4.9.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments>=2.20.0",
    "rich>=14.3.0",
    "syslog-rfc5424-formatter==1.2.3",
    "textual>=8.2.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uc-micro-py>=2.0.0",
    "urllib3==2.6.3",
]
